# eth_certify

./: .env.example  .gitignore  CLAUDE.md  Readme.md  certify.conf  deploy.sh  pyproject.toml  verify.sh
.github/scripts/: certify_summary.py  resolve_extract.py  resolve_lean_extract.py  resolve_manifest.py  verify_summary.py  workflow_utils.py
.github/workflows/: anchor-manifest.yml  certify-aeneas.yml  certify-external-extract.yml  certify-external.yml  certify-lean.yml  certify-v2.yml  certify-verus.yml  ci.yml  test-action.yml  verify-aeneas.yml  verify-certify-badge.yml.example  verify-extract.yml  verify-lean.yml  verify-v2.yml  verify-verus.yml  verify.yml
action/: README.md  action.yml
certifications/: README.md
certifications/beneficial-ai-foundation-curve25519-dalek-lean-verify/: README.md  badge.json  history.json
certify_cli/: __init__.py  __main__.py  config.py  deploy.py  envelope.py  foundry.py  proofs.py  registry.py  safe.py  verify.py  verify_certification.py
doc/: accomplishments.md  badge.md  computing_hashes_locally.md  mainnet_deployment.md  overview.md  safe_integration.md  slides.md  team_wallet.md  trust_model.md  visual_summary.md
kb/: index.md
kb/decisions/: 001-immutable-certifier.md  index.md  (+2 more)
script/: Certify.s.sol
scripts/: generate-badge-svg.sh  update-badge.sh
src/: Certify.sol
test/: Certify.t.sol
tests/: conftest.py  test_config.py  test_deploy_helpers.py  test_envelope.py  test_lean_support.py  test_merkle.py  test_proofs_pipeline.py  test_registry.py  test_resolve_manifest.py  test_ssrf.py  test_verify_cert.py
(+927 files in other folders)
